--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
+    "express-session": "^1.18.2",
     "fileupload": "^1.0.0",
     "mongoose": "^8.20.0",
     "nodemon": "^3.1.11",
